--- a/gb/25/7/5/n14545455.md
+++ b/gb/25/7/5/n14545455.md
@@ -36,7 +36,6 @@
 <p>资料更新时间：2025年7月5日晚间10时4分</p>
 <p>责任编辑：林妍#</p>
 </div>
-
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/920513/djy/blob/master/gb/11/6/12/n3284139.md#1">沉粹典丽 风骨逆劲──唐初四大书法家之 虞世南</a></li>
 <li><a href="https://github.com/920513/djy/blob/master/gb/11/10/7/n3394783.md#1">后世圭臬 唐楷第一书家欧阳询</a></li>
@@ -49,7 +48,7 @@
 <li><a href="https://github.com/920513/djy/blob/master/gb/22/1/16/n13507994.md#1">【书法漫谈】中国书法的神性特点</a></li>
 <li><a href="https://github.com/920513/djy/blob/master/gb/23/6/29/n14025211.md#1">宏硕壮阔 最具帝王气象的唐太宗诗歌</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/12/11/n10903516.md#1" target="_blank">观雨堂主：一位历史学家在生命终点的“争宠”</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/4/8/n11172214.md#1" target="_blank">只做了这一件事 他们绝处逢生（一）</a></li>
+<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2020/01/05/a102745738.md#1" target="_blank">响彻世界政坛的正义之声</a>  </li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/1/n11226848.md#1" target="_blank">共产暴政录：越共排华事件</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/16/10/23/n8423584.md#1" target="_blank">屡遭拘禁摧残16年 妇坚修法轮功神奇复原</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/18/n14533738.md#1">太子密谋造反 李渊轻诺废储 李世民回朝只是付诸一笑</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543500.md#1">【未解之谜】深度解读《天使的遗言》使命与未来 龙树谅传递的终极信息</a></li>
